--- a/src/components/layout/Sider/CustomSider.module.css
+++ b/src/components/layout/Sider/CustomSider.module.css
@@ -58,11 +58,7 @@ aside {
     box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.15);
 }
 
-@media (max-width: 835px) {
-    h4 br {
-        display: none;
-    }
-}
+
 
 @media (max-width: 576px) {
     .logo {
